# CortexOS

./: .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml  render.yaml
.claude/: launch.json
api/: Dockerfile  alembic.ini  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 0001_initial.py  0002_benchmark_and_svm.py  0003_job_cancellation_and_progress.py  0004_worker_heartbeat.py
api/cortex/: __init__.py  config.py  db.py  events.py  jobs.py  main.py  models_client.py  schema.py  tokens.py  traces.py  worker.py
api/cortex/baseline/: pipeline.py
api/cortex/benchmark/: runner.py
api/cortex/benchmark/suites/: demo_store.json
api/cortex/ingestion/: gitfetch.py  js_parser.py  markdown_parser.py  pipeline.py  python_parser.py
api/cortex/kernel/: budget.py  compiler.py  impact.py  pipeline.py  profiler.py  requirements.py  retriever.py  sufficiency.py
api/cortex/providers/: __init__.py  base.py  ollama.py
api/cortex/routes/: benchmarks.py  executions.py  graph.py  impact.py  jobs.py  sources.py
api/cortex/svm/: manager.py
api/tests/: test_config.py  test_gitfetch.py  test_graph.py  test_impact.py  test_js_parser.py  test_kernel.py  test_parsers.py
handbook/: 00_READ_ME_FIRST.md  01_PROJECT_VISION_AND_PROBLEM.md  02_RESEARCH_THESIS_AND_OPTIMIZATION_MODEL.md  03_CORE_ARCHITECTURE_AND_RUNTIME_FLOW.md  04_CONTEXT_COMPILER_AND_SEMANTIC_IR.md  05_SEMANTIC_VIRTUAL_MEMORY.md  06_ADAPTIVE_INFERENCE_AND_ADVANCED_OPTIMIZATION.md  07_KNOWLEDGE_INGESTION_AND_DATA_MODEL.md  08_CORTEXOS_STUDIO_FRONTEND.md  (+6 more)
studio/: .env.example  (+3 more)
(+39 files in other folders)
